monitoring/virtual-service-prometheus.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: muffin-wallet
  namespace: wallet-monitoring
spec:
  hosts:
    - prometheus-muffin.com
  gateways:
    - ilyatyamin-muffin-istio-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus
            port:
              number: 9090
      retries: # https://habr.com/ru/companies/domclick/articles/521458/
        attempts: 3
        perTryTimeout: 1s
        retryOn: 5xx
      timeout: 3s
